// MenuOutException.java

package ru.smurtazin.start;

import java.util.*;

public class MenuOutException extends RuntimeException {

	public MenuOutException(String msg) {
		super(msg);
	}

}
